Add Meal details page (just the layout)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hotmeals</string>
+    <string name="title_activity_meal_details">MealDetailsActivity</string>
 </resources>
